BUG:222186

With respect to the action done on hitting the "Return/Enter" key:
 * Fix the behavior for multiple-item opening, when they have directories among them.
 * Open multiple directories in background tabs.


svn path=/trunk/KDE/kdebase/apps/; revision=1073019